--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "name": "node-stream-batch",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "scripts": {
+    "start": "node main.js"
   }
 }
